--- a/client/index.html
+++ b/client/index.html
@@ -56,18 +56,20 @@
             <div class="col-md-4 col-md-offset-4">
                 <div class="panel panel-default login-panel">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Please Sign In</h3>
+                        <!--<h3 class="panel-title">Please Sign In</h3>-->
+                        <h3 class="panel-title">Welcome to Seqview</h3>
                     </div>
                     <div class="panel-body">
                         <form role="form">
                             <fieldset>
-                                <div class="form-group">
+                                <!--<div class="form-group">
                                     <input class="form-control" id="username" placeholder="Username" name="username" autofocus>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-control" id="password" placeholder="Password" name="password" type="password" value="">
                                 </div>
-                                <a href="#" id="btLogin" class="btn btn-lg btn-success btn-block">Login</a>
+                                <a href="#" id="btLogin" class="btn btn-lg btn-success btn-block">Login</a>-->
+                                <a href="#" id="btLogin" class="btn btn-lg btn-success btn-block">Connecting...</a>
                             </fieldset>
                         </form>
                     </div>
@@ -104,27 +106,18 @@
 
             <!-- SEARCH -->
             <div style="margin-top:0px">
-                <!--
+
                 <div style="float:left;margin-top:4px;margin-left:30px;margin-right:5px;">
-                    <input type="text" id="patternSearch" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names">
+                    <input type="text" id="patternSearch0" size="12" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names">
+                </div>
+                <div style="float:left;margin-top:4px;margin-left:2px;margin-right:2px;">
+                    <button type="button" onclick="searchPattern(0)">Search</button>
                 </div>
 
-                <div style="float:left;margin-top:4px;margin-left:5px;margin-right:5px;">
-                    <select id="dSearch" title="# of permitted 'point mutations' from the original pattern">
-                        <option value="0" selected="selected">0</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                    </select>
-                </div>
--->
-                <div style="float:left;margin-left:30px;margin-right:5px;margin-top:4px">
-                    <input type="button" id="showSearchOptions" value="Search pattern" title="Search pattern options"><br>
+                <div style="float:left;margin-left:2px;margin-right:2px;margin-top:4px">
+                    <input type="button" id="showSearchOptions" value="More..." title="Search pattern options" class="options"><br>
                 </div>
 
-                <!--<div style="float:left;margin-top:4px;margin-left:5px;margin-right:5px;">
-                    <button type="button" onclick="searchPattern()">Search pattern</button>
-                </div>-->
 
                 <!-- ICON OF "LOADING..." -->
                 <div style="float:left;margin-top:4px;margin-left:5px;">
@@ -152,19 +145,19 @@
 
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h3 class="modal-title">Search pattern</h3>
+                    <h3 class="modal-title">Search options</h3>
                 </div>
 
                 <div class="modal-body">
                     <div class="row">
-                    <div class="col-sm-3 col-sm-offset-1">
-                        <label class="control-label" for="paramSearchDataset" title="Search for the given pattern in bins (a,b,c...,*,+)/gene names/interval as a:b matches in the selected dataset">Search pattern</label>
+                    <div class="col-sm-2 col-sm-offset-1">
+                        <label class="control-label" for="paramSearchDataset" title="Search for bwt patterns (a,b,c,...),gene names, biological functions (go:xxx), intervals (X-Y) in the selected dataset">Search</label>
                     </div>
                     <div class="col-sm-1 col-sm-offset-0">
                         <input type="text" id="patternSearch" value="abcba*3" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names">
                     </div>
                     <div class="col-sm-1 col-sm-offset-3">
-                        <label class="control-label" for="paramSearchDataset" title="Show matches in the selected dataset">in</label>
+                        <label class="control-label" for="paramSearchDataset" title="Search matches in the selected dataset">in</label>
                     </div>
                     <div class="col-sm-3">
                         <select id="paramSearchDataset">
@@ -174,8 +167,8 @@
 
                 <div class="row">
 
-                    <div class="col-sm-1 col-sm-offset-1">
-                        <select id="paramSearchJoin">
+                    <div class="col-sm-2 col-sm-offset-1">
+                        <select id="paramSearchJoin" title="Join a second search with the corresponding operator">
                             <option value="None" selected></option>
                             <option value="and">and</option>
                             <option value="or">or</option>
@@ -183,9 +176,6 @@
                         </select>
                     </div>
 
-                    <div class="col-sm-2">
-                        <label class="control-label" for="paramSearchDataset" title="Search for the given pattern in bins (a,b,c...,*,+), gene names, or intervals (x:y)">pattern</label>
-                    </div>
                     <div class="col-sm-1 col-sm-offset-0">
                         <input type="text" id="patternSearch2" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names"  disabled="true">
                     </div>
@@ -262,7 +252,7 @@
                 <div class="modal-footer">
                     <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>-->
                     <!--<button type="button" id="btConfigSearchSave" class="btn btn-primary">Save</button>-->
-                    <button type="button" id="btConfigSearch" onclick="$('#searchOptions').modal('hide'); searchPattern()" class="btn btn-primary">Search</button>
+                    <button type="button" id="btConfigSearch" onclick="$('#searchOptions').modal('hide'); searchPattern(1)" class="btn btn-primary">Search</button>
                 </div>
 
             </div>
@@ -343,13 +333,9 @@
                             <b>Organism: </b> select your .wig organism or 'None' if unavailable.
                             <label title="Select the organism for your .wig data, or None if unavailable (no functional or sequence data will load)">
                                 <select id="speciesList" onchange="if (this.selectedIndex!=0) btLoadOptions.disabled=false; else btLoadOptions.disabled=true">
-                                    <option value="null" SELECTED>Select organism...</option>
-                                    <option value="Drosophila melanogaster">Drosophila melanogaster</option>
-                                    <option value="Mus musculus">Mus musculus</option>
-                                    <option value="Saccharomyces cerevisiae">Saccharomyces cerevisiae</option>
-                                    <option value="Schizosaccharomyces pombe">Schizosaccharomyces pombe</option>
                                     <option value="none">None</option>
                                 </select>
+
                             </label>
                         </div>
                     </div>
@@ -453,6 +439,7 @@
                 if($('#paramDescription').val()==undefined)
                     alert("Please type a description for your data");
                 else {
+
                     $('#modalLoadOptions').modal('hide');
                     preprocessing();
                     }
@@ -472,6 +459,8 @@
             });
             $('#loadOptions').click(function()
             {
+                if($('#speciesList')[0].length<=2)
+                    Server.availableOrganisms(populateOrganismList)
                 $('#modalLoadOptions').modal('show');
             });
 
@@ -491,7 +480,8 @@
 
 
                 //Server.connect(true, verifyConnection, username, password, "http://prodiasv21.fis.usal.es:2750/");
-                Server.connect(true, verifyConnection, "", "", "http://127.0.0.1:2750/");
+                //Server.connect(true, verifyConnection, "", "", "http://127.0.0.1:2750/");
+                Server.connect(true, verifyConnection, "", "", "http://vis.usal.es:2750/seqview");
 
                 return false;
             });
@@ -512,7 +502,7 @@
                 }
             }
 
-            $('#btLogout').click(function()
+            /*$('#btLogout').click(function()
             {
                 $('body').css("background-color", "#f8f8f8");
 
@@ -521,7 +511,7 @@
                 destroyAll(true);
 
                 return false;
-            });
+            });*/
 
 
             // TESTING (TODO: only testing, remove this)
