minor bug fixes, single chromosome level track

--- a/client/index.html
+++ b/client/index.html
@@ -133,7 +133,10 @@
         <!-- LOAD WIG/BW FILE -->
         <div style="float:right;margin-left: 10px;margin-right:100px;margin-top:5px;height:20px;width:50px">
             <input type="button" id="loadOptions" value="Load file" title="Load wig or bigwig file" class="options"><br>
+            <a href="help.pdf" target="_blank" class="button">Help</a>
         </div>
+
+
     </div>
 
 
