--- a/client/index.html
+++ b/client/index.html
@@ -197,7 +197,7 @@
                 <hr>
                     <div class="row">
                         <div class="col-sm-1 col-sm-offset-1">
-                        <select id="dSearch" title="# of permitted 'point mutations' from the original pattern">
+                        <select id="dSearch" title="# of permitted letter changes from the original pattern">
                             <option value="0" selected="selected">0</option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -205,10 +205,10 @@
                         </select>
                         </div>
                         <div class="col-sm-4 col-sm-offset-0">
-                            <label class="control-label" for="dSearch" title="# of deviations from the pattern">mutations allowed</label>
+                            <label class="control-label" for="dSearch" title="# of deviations from the pattern">changes allowed</label>
                         </div>
                         <div class="col-sm-3">
-                            <label title="Soft mutations consider only 1-letter distance mutations, in the case that parameter d>0"><input type="checkbox" id="paramMutations" checked>Soft mutations<br></label>
+                            <label title="Soft changes consider only 1-letter distance changes (e.g. 'a' to 'b' but not 'a' to 'c')"><input type="checkbox" id="paramMutations" checked>Soft changes<br></label>
                         </div>
 
                     </div>
@@ -247,6 +247,23 @@
                         </div>
                         <div class="col-sm-2">
                             <input class="form-control" type="text" value="6" id="paramKmotif">
+                        </div>
+
+                    </div>
+
+                    <hr>
+
+                    <div class="row">
+                        <div class="col-sm-4 col-sm-offset-1">
+                            <label title="Discard evidences inferred from electronical annotations"><input type="checkbox" id="paramDiscard" checked="true">Discard IEA evidences<br></label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-3 col-sm-offset-1">
+                            <label class="control-label" for="paramPval" title="False Discovery Rate threshold for multiple hypothesis corrected GO enrichment">FDR threshold</label>
+                        </div>
+                        <div class="col-sm-2">
+                            <input class="form-control" type="text" value="0.01" id="paramPval">
                         </div>
 
                     </div>
@@ -508,18 +525,6 @@
                     alert("The user or password is incorrect");
                 }
             }
-
-            /*$('#btLogout').click(function()
-            {
-                $('body').css("background-color", "#f8f8f8");
-
-                $('.core-view').hide();
-                $('.start-view').show();
-                destroyAll(true);
-
-                return false;
-            });*/
-
 
             // TESTING (TODO: only testing, remove this)
             ////////////////////////////////////////////////
