--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Genome Browser Visualization</title>
+    <title>SeqView</title>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -91,7 +91,7 @@
 
 
                 <div style="float:left;margin-left: 30px;margin-right:5px;">
-                   <input type="button" id="selectFile" value="Select data" title="Select preloaded data"><br>
+                   <input type="button" id="selectFile" value="Select data" title="Select preprocessed data"><br>
                 </div>
 
                 <!-- ICON OF "LOADING..." -->
@@ -153,7 +153,7 @@
 
                 <div class="modal-body">
                     <div class="row">
-                    <div class="col-sm-2 col-sm-offset-1">
+                        <div class="col-sm-2 col-sm-offset-1">
                         <label class="control-label" for="paramSearchDataset" title="Search for bwt patterns (a,b,c,...),gene names, biological functions (go:xxx), intervals (X-Y) in the selected dataset">Search</label>
                     </div>
                     <div class="col-sm-1 col-sm-offset-0">
@@ -170,6 +170,7 @@
 
                 <div class="row">
 
+                    <!-- PATTERN SEARCH OPTIONS -->
                     <div class="col-sm-2 col-sm-offset-1">
                         <select id="paramSearchJoin" title="Join a second search with the corresponding operator">
                             <option value="None" selected></option>
@@ -184,7 +185,7 @@
                     </div>
 
                     <div class="col-sm-1 col-sm-offset-3">
-                        <label class="control-label" title="And/or/not">in</label>
+                        <label class="control-label" title="">in</label>
                     </div>
                     <div class="col-sm-3">
                         <select id="paramSearchDataset2"  disabled="true">
@@ -194,7 +195,7 @@
                     </div>
 
                 </div>
-                <hr>
+                <br>
                     <div class="row">
                         <div class="col-sm-1 col-sm-offset-1">
                         <select id="dSearch" title="# of permitted letter changes from the original pattern">
@@ -234,6 +235,50 @@
                         </div>
 
                     </div>
+                    <hr>
+
+
+                    <!-- AGNOSTIC SEARCH OPTIONS -->
+                    <div class="row">
+                        <div class="col-md-5 col-sm-offset-1">
+                            <label title="If checked, replaces the above search by an agnostic search for any difference by size"><input type="checkbox" id="paramAgnostic" disabled="true">Search changes on more than<br></label>
+                        </div>
+                        <div class="col-md-1 col-sm-offset-0">
+                        <input type="text" id="agnosticSearchV" value="150" size="4" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names">
+                        </div>
+                        <div class="col-md-3 col-sm-offset-0">
+                            <!--<label class="control-label" title="">-->
+                            bps in sections of
+                            <!--</label>-->
+                        </div>
+                        <div class="col-md-1 col-sm-offset-0">
+                            <input type="text" id="agnosticSearchL" value="300" size="4" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names">
+                        </div>
+                    </div>
+                    <div class="row">
+
+                        <div class="col-sm-3 col-sm-offset-1">
+                            between datasets
+                        </div>
+                        <div class="col-sm-3">
+                            <select id="paramSearchDataset1a">
+                                <option value="None" selected></option>
+                            </select>
+                        </div>
+
+                        <div class="col-sm-1 col-sm-offset-0">
+                            and
+                        </div>
+                        <div class="col-sm-3">
+                            <select id="paramSearchDataset2a"  disabled="true">
+                                <option value="None" selected></option>
+                            </select>
+
+                        </div>
+
+                    </div>
+
+
                     <hr>
 
                     <div class="row">
