minor changes and export fasta bug corrected

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -98,7 +98,7 @@
 
 
                 <div style="float:left;margin-left: 30px;margin-right:5px;">
-                   <input type="button" id="selectFile" value="Select data" title="Select preprocessed data"><br>
+                   <input type="button" id="selectFile" value="Select data" title="Select preprocessed data">
                 </div>
 
                 <!-- ICON OF "LOADING..." -->
@@ -116,18 +116,13 @@
 
                 <div style="float:left;margin-top:4px;margin-left:30px;margin-right:5px;">
                     <input type="text" id="patternSearch0" size="12" title="pattern to search, according to the window and number of bins. You can also search for intervals with 'start-end' and by gene names">
-                </div>
-                <div style="float:left;margin-top:4px;margin-left:2px;margin-right:2px;">
                     <button type="button" onclick="searchPattern(0)">Search</button>
-                </div>
-
-                <div style="float:left;margin-left:2px;margin-right:2px;margin-top:4px">
-                    <input type="button" id="showSearchOptions" value="Options" title="Search pattern options" class="options"><br>
+                    <input type="button" id="showSearchOptions" value="Options " title="Search pattern options" class="options2"><br>
                 </div>
 
 
-                <!-- ICON OF "LOADING..." -->
-                <div style="float:left;margin-top:4px;margin-left:5px;">
+                <!-- ICON OF "SEARCHING..." -->
+                <div style="float:left;margin-top:4px;margin-left:0px;">
                     <img id="imgLoadingSearch" src="images/loading.gif" style="visibility:hidden"/>
                 </div>
 
@@ -136,7 +131,7 @@
 
 
         <!-- CHROMOSOME ICONS -->
-        <div style="float:left;margin-left:36px;" id="imagesChromosomes"></div>
+        <div style="float:left;margin-left:20px;" id="imagesChromosomes"></div>
 
         <!-- LOAD WIG/BW FILE -->
         <div style="float:right;margin-left: 10px;margin-right:100px;margin-top:5px;height:20px;width:10px; overflow: visible; text-align:right;">
